# bazel-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go_repositories_deps.bzl
01-hello/: BUILD.bazel  hello.go  hello_test.go
01a-mix/: BUILD.bazel  hello.cc  hello.go
02-go-dependency/: BUILD.bazel  main_test.go
03-go-package/: BUILD.bazel  main.go
03-go-package/printer/: BUILD.bazel  printer.go
04-version/: BUILD.bazel  main.go
05-docker-image/: BUILD.bazel
tools/version_gen/: BUILD.bazel  gen.bzl  main.go
